# mkdocs-git-revision-date-localized-plugin

./: .codecov.yml  .flake8  .gitignore  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  schema.json  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: pythonpublish.yml  scheduled_unittests.yml  unittests.yml  unittests_codecov.yml  workflow.yml
available-variables/: index.html
docs/: available-variables.md  getting-started.md  options.md  schema.json  usage.md
docs/howto/: custom-styling.md  override-a-theme.md  specify-locale.md  use-in-alpine-docker.md
docs/overrides/partials/: source-date.html
howto/custom-styling/: index.html
howto/override-a-theme/: index.html
howto/specify-locale/: index.html
howto/use-in-alpine-docker/: index.html
mkdocs_git_revision_date_localized_plugin/: ci.py  dates.py  exclude.py  plugin.py  util.py
mkdocs_git_revision_date_localized_plugin/css/: timeago.css
mkdocs_git_revision_date_localized_plugin/js/: timeago_mkdocs_material.js
mkdocs_git_revision_date_plugin/: filters.py  plugin.py  util.py
options/: index.html
search/: search_index.json
src/mkdocs_git_revision_date_localized_plugin/: __init__.py  ci.py  dates.py  exclude.py  plugin.py  util.py
test/: test_basic.py  test_util.py
test/basic_setup/: mkdocs.yml  mkdocs_theme_locale.yml  mkdocs_timeago.yml
test/basic_setup/docs/: index.md
tests/: test_basic.py  test_builds.py  test_custom_field_name_config.py  test_custom_field_name_integration.py  test_custom_field_names.py  test_dates.py  test_enhanced_dates.py  test_exclude.py  test_frontmatter.py  test_frontmatter_integration.py  test_parse_git_ignore_revs.py  test_plugin.py  test_requirements.txt
tests/basic_setup/: mkdocs_datetime.yml  mkdocs_ignore_missing_git.yml  mkdocs_locale.yml  mkdocs_plugin_locale.yml  mkdocs_theme_no_locale.yml  mkdocs_unknown_type.yml
tests/basic_setup/docs/: first_page.md  page_with_tag.md  page_without_tag.md
tests/fixtures/basic_project/: gen_files.py  mkdocs_creation_date.yml  mkdocs_creation_date_with_follow.yml  mkdocs_custom_type.yml  mkdocs_exclude.yml  mkdocs_ignored_commits.yml  mkdocs_meta.yml  mkdocs_no_parallel.yml  mkdocs_plugin_genfiles.yml  mkdocs_theme_language.yml  mkdocs_theme_locale_and_language.yml  mkdocs_theme_locale_and_language_5char.yml  mkdocs_theme_locale_disabled.yml  mkdocs_theme_timeago.yml  mkdocs_theme_timeago_instant.yml  mkdocs_theme_timeago_locale.yml  mkdocs_theme_timeago_override.yml  mkdocs_timeago_locale.yml  mkdocs_with_override.yml
tests/fixtures/basic_project/docs/: index.md  page_with_renamed.md  page_with_tag.md  second_page.md  subpage.md
tests/fixtures/basic_project/docs/overrides/: content.html
tests/fixtures/basic_project/docs/overrides_material_theme/partials/: source-date.html  source-file.html
tests/fixtures/basic_project/docs/overrides_mkdocs_theme/: content.html
tests/fixtures/basic_project/docs/subfolder/: page_in_subfolder.md
tests/fixtures/demo/: mkdocs.yml
tests/fixtures/demo/docs/: index.md  one.md  two.md
tests/fixtures/i18n/: mkdocs.yml  mkdocs_wrong_order.yml
tests/fixtures/i18n/docs/: index.fr.md  index.md
tests/fixtures/i18n/docs/topic1/: named_file.en.md  named_file.fr.md
tests/fixtures/i18n/docs/topic2/: README.en.md  README.md
tests/fixtures/mkdocs-gen-files/: README.md  gen_pages.py  mkdocs.yml
tests/fixtures/mkdocs-gen-files/docs/: index.md
tests/fixtures/monorepo/: .gitignore  mkdocs.yml  mkdocs_reverse_order.yml
tests/fixtures/techdocs-core/: mkdocs.yml
tests/fixtures/techdocs-core/docs/: index.md
tests/fixtures/with_mknotebooks/: README.md  mkdocs.yml
tests/fixtures/with_mknotebooks/docs/: demo.ipynb
